--- a/src/components/style.scss
+++ b/src/components/style.scss
@@ -1,6 +1,10 @@
+body {
+  font-family: cursive;
+}
+
 .gymimg {
   background-image: url("../img/gym.jpg");
-  height: 90vh;
+  height: 100vh;
   background-size: cover;
   display: flex;
   flex-direction: column;
@@ -10,7 +14,6 @@
   }
   > div > h2 {
     color: orange;
-    font-family: cursive;
     font-size: 50px;
     display: inline-block;
     margin: 0;
@@ -42,7 +45,7 @@
   margin: auto;
   text-align: center;
   display: flex;
-flex-direction: column;  
+  flex-direction: column;
 }
 
 .trainers {
@@ -60,7 +63,8 @@ flex-direction: column;
     font-weight: 400;
     margin-bottom: 0;
   }
-  >p{    margin-bottom: 40px;
+  > p {
+    margin-bottom: 40px;
   }
 }
 
@@ -99,3 +103,54 @@ flex-direction: column;
     width: 200px;
   }
 }
+
+@media screen and (max-width: 620px) {
+  .gymimg {
+    height: 80vh;
+    > div {
+      flex-direction: column;
+       font-size: 20px;
+    }
+    > div > h2 {
+      text-align: center;
+      font-size: 30px;
+    }
+    .iconDiv {
+      flex-direction: row;
+      height: 55px;
+      justify-content: space-evenly;
+    }
+  }
+
+  .trainers {
+    height: 1250px;
+  }
+  .trainersSection1 {
+    text-align: center;
+  }
+  .trainersSection2 {
+    flex-direction: column;
+  }
+  .trainerinfo {
+    margin-top: 10px;
+  }
+}
+
+
+@media screen and (max-width: 550px) {
+  .trainers {
+    height: 1300px;
+  }
+
+  .gymimg {
+     > div {
+      flex-direction: column;
+       font-size: 15px;
+    }
+    > div > h2 {
+      text-align: center;
+      font-size: 25px;
+    }}
+}
+
+
